# OpenCV-Series

./: .gitignore  README.md
BasicImageOperations/: CMakeLists.txt  image_addition.cpp  pixels.cpp  subtraction.cpp
ImageAnnotation/: CMakeLists.txt
PetProject/cartoonifier/: CMakeLists.txt  cartoonifier.h  main.cpp
QR_Code/: CMakeLists.txt  FindZBar0.cmake  main.cpp  qr.h
facialLandmarking/: CMakeLists.txt  a.out  main.cpp  realTime_dlib.cpp
facialLandmarking/dlib_build/: CMakeCache.txt  CPackConfig.cmake  CPackSourceConfig.cmake  Makefile  cmake_install.cmake  install_manifest.txt
facialLandmarking/dlib_build/dlib/: Makefile  cmake_install.cmake  config.h  dlib-1.pc
facialLandmarking/dlib_build/dlib/test_for_libjpeg_build/: CMakeCache.txt  Makefile  cmake_install.cmake
facialLandmarking/dlib_build/dlib/test_for_libpng_build/: CMakeCache.txt  Makefile  cmake_install.cmake
sunGlassFilter/: CMakeLists.txt  main.cpp  renderFace.cpp  renderFace.hpp  s_facemark.cpp  s_facemark.hpp
sunGlassFilter/facialLandMarking/: CMakeLists.txt  README.txt  main.cpp
